--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,12 +18,11 @@ html, body {
     
 }
 
-
 h3 {
     cursor: pointer;
 }
 
-.answer:hover {
+h3:hover {
     background-color: #5091e7;
 }
 
@@ -38,7 +37,45 @@ h1 {
     margin-block-end: 0.27em;
 }
 
+h2 .question{
+    font-size: 1.75em;
+    font-weight: 700;
+}
+
 h3 {
     margin: 0px 29% 0px 29%;
     padding: 10px;
+}
+
+h3:empty {
+    display: none;
+}
+
+div:empty {
+    display: none;
+}
+
+button {
+    font-size: 24px;
+    padding: 10px 20px 10px 20px;
+    font-weight: 700;
+    background: rgb(66, 66, 248);
+    color: rgb(228, 105, 105);
+    box-shadow: 0 0 25px rgb(48, 46, 46)
+}
+
+.answer-message, .correct-answer, .times-up {
+    font-size: 24px;
+    padding: 10px;
+    font-weight: 600;
+}
+
+.wins, .losses, .no-answer {
+    font-size: 24px;
+    font-weight: 600;
+}
+
+.gameover, .final-message, .start-over {
+    font-size: 32px;
+    font-weight: 700;
 }
